Prevent key-points section from getting too tall

--- a/src/app/components/key-points/key-points.component.scss
+++ b/src/app/components/key-points/key-points.component.scss
@@ -14,6 +14,10 @@
     &.left {
       .bullets-container {
         padding: 20px 20px 20px 0;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         .bullet-item {
           display: flex;
           &:not(:last-child) {
@@ -34,6 +38,7 @@
     &.right {
       .image-container {
         height: 100%;
+        max-height: 300px;
         img {
           vertical-align: inherit;
           object-fit: cover;
